css/style.css
body {
    background: #fff;
    margin: 0;
    padding: 0;
    font-family: "Source Sans Pro", sans-serif;
    color: #2f4956;
}

#logoImg {
    margin: 0;
    padding: 2em;
    opacity: .85;
}

#currentTalk {
    margin: 1.5em auto 0;
    padding: 0 2em;
    font-weight: 300;
    font-size: 2.3em;
    max-width: 800px;
    line-height: 1.7em;
}
.underline {
    border-bottom: 2px solid #1bbc9b;
}
.topJumbo{
  padding-top:30px;
  padding-bottom: 30px;
  margin-bottom: 30px;
  color: inherit;
  background-color: #eee;
  overflow:auto;
}
#logo{

}
#newTalksDiv {
    margin: 0 auto;
    text-align: center;
}
.ePhoto{
  width:100%;
}
.requestTalk {
    margin: 2.5em auto .8em;
    padding: 0 2em;
    font-weight: 300;
    font-size: 1.3em;
    max-width: 500px;
    line-height: 1.6em;
}

.requestLink {
    padding-bottom: .3em;
    color: #2f4956;
    font-size: 1.2em;
    font-weight: 300;
    text-decoration: none;
    border-bottom: 2px solid #1bbc9b;
}

.requestLink:hover {
    border-bottom-color: #2f4956;
}

.footerSocialList {
    margin: 4em 0 0;
    padding: 0;
    list-style: none;
    text-align: center
}

.footerSocialList li {
    display: inline-block;
    padding: 0 1em
}

.footerSocialList li a {
    text-decoration: none;
    padding-bottom: .2em;
}

.footerSocialList li a img {
    opacity: .95;
    -webkit-transition: opacity .1s ease-in-out;
    transition: opacity .1s ease-in-out;
}

.footerSocialList li a img:hover {
    opacity: 1;
}

@media all and (max-width:1000px) {
    #currentTalk {
        margin-top: 1.5em;
        font-size: 2em;
        max-width: 650px;
        line-height: 1.8em;
    }
    .requestTalk {
        margin-top: 5em;
        font-size: 1.2em;
        line-height: 1.6em;
    }
    .requestLink {
        padding-bottom: .2em;
        font-size: 1.1em;
    }
    .footerSocialList {
        margin-top: 8em;
        margin-bottom: 4em;
    }
}

@media all and (max-width:500px) {
    #currentTalk {
        display: none;
    }
    .requestTalk {
        padding: 0 1em;
        font-size: 1.1em;
    }
    .requestLink {
        font-weight: 300;
        font-size: 1.2em;
    }
    .footerSocialList {
        margin-top: 10em;
        margin-bottom: 2em;
    }
}
#dan{
    margin-top: 16px;
}
#nick{
    margin-top: 16px;
}
#ricky{
    margin-top: 16px;
}
#bogaard{
    margin-top: 16px;
}

